tests_bucklescript/__snapshots__/Error_Objects_missingField_re.ab6ff928.0.snapshot
Error Objects › missingField3.re › output
File \"operations/errors/missingField3.re\", line 15, characters 6-18:
15 |       doesNotExist
           ^^^^^^^^^^^^
Error: Unknown field 'doesNotExist' on type Lists

  We've found a bug for you!
  operations/errors/missingField3.re
  
  Error while running external preprocessor
Command line: ../_build/default/src/bucklescript_bin/bin.exe -objects '/var/folders/nn/nkqr2fl53p93lzfh2n6s17hh0000gn/T/camlppxfdd78a' '/var/folders/nn/nkqr2fl53p93lzfh2n6s17hh0000gn/T/camlppx1a27ff'

  

